css/browser.css
body {
	background-color: black;
}
img{
    -webkit-user-drag: none;
}
#bg {
    position: fixed;
    /* Preserve aspect ratio */
    min-width: 100%;
    min-height: 100%;
	z-index: -1;
}
.browserTitle{
    color: white;
    opacity: 0.8;
    position: absolute;
    top: -5px;
    left: 80;
}
#logo{
    position: absolute;
    top: 8;
    left: 15;
    opacity: 0.8;
    width: 50px;
    height: 43px;
}
.refresh {
    opacity: 0.8;
    position: absolute;
    top: 13;
    left: 375;
    color: white;
    font-weight: bold;
    background-color: black;
    width: 115px;
    height: 30px;
    border-style: solid;
    border: 1px solid white;
	z-index:1000;
}
.refresh:hover{
    background-color: #1a3d5a;
}
.serverStats {
    color: white;
	font-weight: bold;
    opacity: 0.8;
    position: absolute;
    top: 10;
    left: 515;
}
.closeButton {
    opacity: 0.8;
    position: absolute;
    top: 13;
    right: 10;
    color: white;
    font-weight: bold;
    background-color: black;
    width: 95px;
    height: 30px;
    border-style: solid;
    border: 1px solid white;
    display: none;
}
.closeButton:hover{
    background-color: #1a3d5a;
}
.controllerButton{
    opacity: 0;
    margin-top: -3;
    margin-left: 5;
    height: 28;
    width: 28;
    display: none;
}
.selected .controllerButton{
    opacity: 1;
}
.refresh .controllerButton{
    opacity: 1;
}
.closeButton .controllerButton{
    opacity: 1;
}
#serverTable_wrapper{
    opacity: 0.8;
    top: 55;
    padding-top: 0;
}
#serverTable tbody tr td{
    background-color: black;
    color: white;
}
#serverTable tbody tr.selected td{
    background-color: white;
    color: black;
}
#serverTable thead tr th.sorting_asc, thead tr th.sorting_desc {
    background-color: white;
    color: black;
}
#serverTable thead tr th.sorting:hover{
    background-color: #545454;
    color: white;
}
#serverTable thead tr th.sorting{
    background-color: #1a3d5a;
    color: white;
    border-bottom: 1px solid white;
}
#serverTable tbody tr td.sorting_1{
    background-color: #1a3d5a;
    color: white;
}
#serverTable tbody tr:hover td{
    background-color: #1a3d5a;
	color: white;
    cursor: pointer;
}

#serverTable_filter{
    opacity: 0.8;
    position: fixed;
    top: 15;
    right: 10;
}
#serverTable_filter label{
    color: white;
}
#serverTable_filter input{
    color: black;
}
#serverTable_length{
    opacity: 0.8;
    position: fixed;
    bottom: 10; 
    left: 15;
	z-index: 1;
}
#serverTable_length label{
    color: white;
}
#serverTable_length select{
    color: black;
}
#serverTable_paginate{
    opacity: 0.8;
    position: fixed;
    bottom: 5; 
    right: 15;
    background-color: black;
	z-index: 1;
}
#serverTable_paginate label{
    color: white !important;
}
#serverTable_info{
	position: fixed;
	font-weight: bold;
    color: white;
    background-color: #545454;
	padding-top: 15;
	padding-left: 45%;
	left: 0;
	bottom: 0;
	width: 100%;
	height: 50;
	opacity: 0.8;
	border: 1px solid black;
	z-index: 0;
}
#serverTable{
	padding-bottom: 50;
	border-bottom: 0;
}
#connectionStatus{
	opacity: 0.8;
	position:fixed; bottom:0; right: 0;
	z-index:1000;
	padding-right: 8;
	padding-bottom: 7;
    color: white;
}
td.details-control {
    background: url('../images/details_open.png') no-repeat center center;
    cursor: pointer;
	background-color: black !important;
}
tr.shown td.details-control {
    background: url('../images/details_close.png') no-repeat center center;
}
#gamecard{
    margin-left: 5%;
	padding: 10;
	padding-right: 0;
    float: left;
	background-color: white;
	color: black;
	height: 264px;
	width: 400px;
}
#gamecard h2, #gamecard h3, #gamecard h4, #gamecard h5{
	padding: 1;
	margin: 0;
}
#mapPic{
	float: none;
	clear: right;
	padding-bottom: 10;
	padding-right: 12;
}
#gameTypePic{
	height: 70;
	width: 70;
	float: left;
	margin-right: 10;
	padding: 2;
}
#gameStatus{
	position: relative;
	float: right;
	bottom: 25;
	right: 15;
}
#gameName{
    line-height: 15px;
}
#hostName{
	font-weight: bold;
}
#scoreboard{
    float: right;
    height: 264px;
    overflow-y: auto;
    overflow-x: hidden;
    width: 56%;
	margin-right: 5%;
}
.statLines{
    font-size: 10pt;
	background-color: black !important;
}
.tableHeader{
    font-size: 10pt;
    padding: 0; 
}
.statBreakdown{
    width: 100%;
}
.private{
	background-color: black !important;
    color: #843534;
	border: 3px solid #843534;
}
.private h3{
	font-weight: bold;
	margin: 0;
	padding-top: 60;
}

